<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/main"/>

    <item
        android:id="@+id/shop"
        android:enabled="true"
        android:icon="@drawable/ic_shoping"
        android:title="@string/shop"/>

    <item
        android:id="@+id/community"
        android:enabled="true"
        android:icon="@drawable/ic_community"
        android:title="@string/community"/>

    <item
        android:id="@+id/suport"
        android:enabled="true"
        android:icon="@drawable/ic_support"
        android:title="@string/support"/>

    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
</menu>