<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <!--верхнее меню-->
    <LinearLayout
        android:id="@+id/quickMeny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp">


        <ImageButton
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_hed" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_shop" />

        <ImageButton
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/black"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_search" />
    </LinearLayout>
    <!--скроллер с продуктами-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/quickMeny">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:paddingStart="30dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoping"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />


            <androidx.cardview.widget.CardView
                android:layout_width="310dp"
                android:layout_height="160dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="TODO"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fon" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/your_string"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="6dp"
                        android:layout_gravity="left"
                        android:text="@string/_30"
                        android:textColor="@color/teal_200"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="6dp"
                        android:text="с 15 по 24 февраля"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_gravity="left"
                        android:background="@drawable/btn_for_buy"
                        android:text="@string/Now_more"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:layout_margin="5dp"



                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Ноутбуки"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:background="@color/grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/nout" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlSymmetry">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Планшеты"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:background="@color/grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/table" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlSymmetry">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Телефоны"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:background="@color/grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/telefon" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="140dp"
                    android:layout_height="180dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="RtlSymmetry">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="Наручные часы"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="114dp"
                            android:layout_height="81dp"
                            android:layout_margin="10dp"
                            android:adjustViewBounds="true"
                            android:background="@color/grey"
                            android:scaleType="centerCrop"
                            android:src="@drawable/watch" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <!--нижнее меню-->
    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:background="@color/cardview_dark_background"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"

        app:menu="@menu/bottom_menu" />

</RelativeLayout>






